[package]
name = "axiom"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11"
tokio = { version = "1", features = ["full"] }
rand = "0.8.4"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = "0.26"
clap = "3.2.16"
uuid = { version = "1.1.2", features = ["v4"] }
prettytable-rs = "0.8.0"
